--- a/public/index.html
+++ b/public/index.html
@@ -7,47 +7,30 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href='stylesheet.css'
-    />
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-    <div id="sidebar">
-      <!-- <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">×</a> -->
-      <!-- <a href="#" id="login-button">로그인</a> -->
-      <!-- <a href="#" id="signup-button">회원가입</a> -->
+    <div id="sidebar"></div>
+
+    <div id="modal-container"></div>
+
+    <div id="main-container">
+      <div id="main-header">
+        <h1 id="board-name">보드이름</h1>
+        <button>멤버목록</button>
+        <button>초대하기</button>
+      </div>
+      <div id="main"></div>
     </div>
 
-    <!-- 모달 컨테이너 -->
-    <div id="modal-container">
-
-    </div>
-
-    <div id="main">
-      <!-- <span id="menu-button" onclick="openNav()">☰</span> -->
-
-      <!-- <div class="back"> -->
-        <!-- 칸반 보드 -->
-        <!-- <div class="board" id="board"></div> -->
-        <!-- <button id="add-column-btn">새로운 열 추가</button> -->
-      <!-- </div> -->
-    </div>
-    
     <script type="module" src="value.js"></script>
     <script type="module" src="sidebar.js"></script>
     <script type="module" src="board.js"></script>
     <script type="module" src="column.js"></script>
     <script type="module" src="card.js"></script>
-    <script type="module" src="modal.js"></script>
+    <script type="module" src="user.js"></script>
     <script type="module" src="main.js"></script>
   </body>
 </html>
