--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     <div id="main-container">
       <div id="main-header">
-        <h1 id="board-name">보드이름</h1>
+        <h1 id="board-name"></h1>
         <button>멤버목록</button>
         <button>초대하기</button>
       </div>
