✨ feat: 보드 멤버 초대 프론트 연결 진행중, 사용자 목록 전체/검색 조회 프론트 연결 완료
- 보드 멤버 전체/검색 조회 API 추가
- 보드 멤버 초대 시 보드 멤버 저장하는 기능 테스트 전 커밋.. ..

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <div id="main-container">
       <div id="main-header">
         <h1 id="board-name"></h1>
-        <button>멤버목록</button>
+        <button id="invite-user-list-search">멤버목록</button>
         <button>초대하기</button>
       </div>
       <div id="main"></div>
