💄 style: 상단 영역 조회 기능 수정
- main-container를 main-container, menu-container로 분리
- 보드를 선택해야 상단 영역이 나타나도록 수정

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
 
     <div id="modal-container"></div>
 
+    <div id="menu-container">
+      <div id="menu"></div>
+    </div>
+
     <div id="main-container">
       <div id="main-header">
         <h1 id="board-name"></h1>
