add : socket events

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="stylesheet.css" />
+    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="sidebar"></div>
@@ -28,8 +29,8 @@
       </div>
       <div id="main"></div>
     </div>
-
     <script type="module" src="value.js"></script>
+    <script type="module" src="socket.js"></script>
     <script type="module" src="sidebar.js"></script>
     <script type="module" src="board.js"></script>
     <script type="module" src="column.js"></script>
